Added favorite things.

--- a/pet-blog.html
+++ b/pet-blog.html
@@ -18,7 +18,12 @@
       <li>Go back to step 5 and repeat</li>
       <li>Eat again, go out again, and go to sleep for the night</li>
     </ol>
-
-
+    <h2>Favorite Things</h2>
+    <ul>
+      <li>Bones</li>
+      <li>New Toys</li>
+      <li>Getting Pet</li>
+      <li>Drinking Water</li>
+    </ul>
   </body>
 </html>
