This adds pictures, strong and em elements.

--- a/pet-blog.html
+++ b/pet-blog.html
@@ -4,8 +4,8 @@
     <title>Monkey's Blog</title>
   </head>
   <body>
-    <h1>Monkey's Blog</h1>
-    <h2>Daily Routine</h2>
+    <h1><strong>Monkey's Blog</strong></h1>
+    <h2><em>Daily Routine</em></h2>
     <p>Every day is like groundhog's day. I do the same things everyday, my life is not all that exciting.</p>
     <ol>
       <li>Wake up and stretch</li>
@@ -21,9 +21,13 @@
     <h2>Favorite Things</h2>
     <ul>
       <li>Bones</li>
+      <img src="img/haloTreats.jpg" alt="Picture of Halo Pumpkin Dog Treats">
       <li>New Toys</li>
+      <img src="img/mooseDogToy.jpeg" alt="Picture of moose dog toy">
       <li>Getting Pet</li>
+      <img src="img/pettingPug.jpg" alt="Picture of pug getting pet">
       <li>Drinking Water</li>
+      <img src="img/pugDrinkingWater.jpg" alt="Picture of pug drinking water">
     </ul>
   </body>
 </html>
