--- a/Desktop/travelSite/index.html
+++ b/Desktop/travelSite/index.html
@@ -11,7 +11,7 @@
     <h2>The luxurious <a href="amenities.html">amenities</a>offered are listed here.</h2>
     <h3>We have extremely life changing <a href="activities.html">activities</a> on and off our premises.</h3>
     <h4><a href="contactinfo.html"> Contact</a>Information</h4>
-    <p>"This hotel is super- SO IMMACULATE! It is the most awesome time you could ever possibly have in haiti. You'll want to live, eat, breathe and die.... here."- Qui Gon Jinn</p>
+    <p><mark>"This hotel is super- SO IMMACULATE! It is the most awesome time you could ever possibly have in haiti. You'll want to live, eat, breathe and die... It's <strong>your</strong> last resort!" -Qui Gon Jinn, Jedi Master.</p>
     </body>
 
 </html>
